# email-newsletter

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  state.rs  telemetry.rs
src/health_check/: mod.rs
src/subscribe/: handler.rs  mod.rs  subscription.rs
tests/: health_check.rs  subscription.rs
tests/common/: mod.rs
