[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Gusti Zainokta <zainokta@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.7.9"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }

[dev-dependencies]
reqwest = "0.12.11"
