[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Gusti Zainokta <zainokta@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.7.9"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
config = "0.15.4"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1.11.0", features = ["v4"] }
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
tower-http = { version = "0.6.2", features = [
    "catch-panic",
    "cors",
    "request-id",
    "timeout",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
reqwest = "0.12.11"
